--- a/frontend/src/components/UserMenu/UserMenu.css
+++ b/frontend/src/components/UserMenu/UserMenu.css
@@ -1,6 +1,5 @@
 .user_menu {
     display: flex;
-    margin-top: 25px;
     justify-content: center;
 }
 
@@ -43,8 +42,12 @@
 }
 
 .card_user_text {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
     font-size: 14px;
     text-align: left;
+    margin-bottom: 10px;
 }
 
 .card_user_btn {
@@ -108,4 +111,10 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+
+.btn_edit_user {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 }
