--- a/frontend/src/components/UserMenu/UserMenu.css
+++ b/frontend/src/components/UserMenu/UserMenu.css
@@ -115,6 +115,12 @@
 
 .btn_edit_user {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     gap: 10px;
+}
+
+.btn_delete_user:hover {
+    color: #f13a0f;
+    border-color: #f13a0f;
 }
