--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -162,8 +162,6 @@
     padding: 20px;
     border-radius: 12px;
     background-color: white;
-    height: 150px;
-    width: 400px;
     transform: scale(0.5);
     transition: 0.4s all;
 }
@@ -311,8 +309,14 @@
 
 .btn_edit_user {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     gap: 10px;
+}
+
+.btn_delete_user:hover {
+    color: #f13a0f;
+    border-color: #f13a0f;
 }
 
 /*!********************************************************************************!*\
