--- a/frontend/src/components/UserMenu/UserMenu.css
+++ b/frontend/src/components/UserMenu/UserMenu.css
@@ -69,7 +69,6 @@
     padding: 10px;
     background-color: rgb(236, 248, 254);
     border-radius: 8px;
-    margin-bottom: 10px;
     display: flex; 
     text-align: left;
     height: max-content;
@@ -77,16 +76,9 @@
     justify-content: space-between;
 }
 
-.card_text_file {
-    text-align: left;
-    color: rgb(9, 27, 78);
-    overflow-wrap: break-word;
-    margin-top: 20px;
-}
-
 .card_file_img {
-    width: 100px;
-    height: 100px;
+    width: 130px;
+    height: 130px;
     cursor: pointer;
 }
 
@@ -105,6 +97,8 @@
 
 .card-text, .card-title {
     margin: 0 0 5px 10px;
+    padding: 3px;
+    word-break: break-all;
 }
 
 .card_img {
@@ -134,4 +128,15 @@
 
 .input_form {
     transition: 0.4s;
+}
+
+.cards_file {
+    display: flex;
+    gap: 8px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.user_menu_auth_smile {
+    font-size: 30px;
 }
