change src image on import

--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -1,3 +1,6 @@
+/*!******************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/StartMenu/StartMenu.css ***!
+  \******************************************************************************************/
 .menu {
     display: flex;
     margin-top: 20px;
@@ -70,6 +73,9 @@
 .text_info {
     color: rgb(9, 27, 78);
 }
+/*!******************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/LoginForm/LoginForm.css ***!
+  \******************************************************************************************/
 .form {
     display: flex;
     flex-direction: column;
@@ -91,6 +97,9 @@
     color: rgb(9, 27, 78);
     display: flex;
 }
+/*!********************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/RegistrationForm/RegistrationForm.css ***!
+  \********************************************************************************************************/
 .input_form {
     display: flex;
     flex-direction: column;
@@ -113,12 +122,18 @@
     color: rgb(9, 27, 78);
     font-size: 15px;
 }
+/*!***************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/App.css ***!
+  \***************************************************************/
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
+/*!******************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/AdminMenu/AdminMenu.css ***!
+  \******************************************************************************************/
 .folder_open_filed {
     cursor: pointer;
     width: 22px;
@@ -160,6 +175,9 @@
     word-break: break-all;
     max-width: 150px;
 }
+/*!********************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/ModalPopup/ModalPopup.css ***!
+  \********************************************************************************************/
 .modal {
     width: 100vw;
     height: 100vh;
@@ -206,6 +224,9 @@
     color: #e64c12;
     font-size: 23px;
 }
+/*!******************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/AdminCreateUser/AdminCreateUser.css ***!
+  \******************************************************************************************************/
 .input_create_form {
     height: 30px;
     display: flex;
@@ -223,6 +244,9 @@
     color: SeaGreen;
     font-size: 23px;
 }
+/*!************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/ModalPopupEditUser/ModalPopupEditUser.css ***!
+  \************************************************************************************************************/
 .modal {
     width: 100vw;
     height: 100vh;
@@ -283,6 +307,9 @@
     right: 5px;
     top: 6px;
 }
+/*!************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/ModalPopupEditFilesAdmin/ModalPopupEditFilesAdmin.css ***!
+  \************************************************************************************************************************/
 .modal {
     width: 100vw;
     height: 100vh;
@@ -343,6 +370,9 @@
     right: 5px;
     top: 6px;
 }
+/*!****************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/UserMenu/UserMenu.css ***!
+  \****************************************************************************************/
 .user_menu {
     display: flex;
     justify-content: center;
@@ -486,6 +516,9 @@
     font-size: 30px;
 }
 
+/*!********************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/File/File.css ***!
+  \********************************************************************************/
 .card_text_file {
     display: flex;
     width: 100%;
@@ -524,6 +557,9 @@
     display: contents;
 }
 
+/*!************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/DownloadFile/DownloadFile.css ***!
+  \************************************************************************************************/
 .upload_file_menu {
     display: flex;
     justify-content: center;
@@ -569,6 +605,9 @@
     transition: 1s;
 }
 
+/*!*****************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/index.css ***!
+  \*****************************************************************/
 :root {
   font-family: Trebuchet MS, sans-serif;
     src: url(../9f1aa0037c24e0f6935e.ttf);
