--- a/frontend/templates/frontend/404.html
+++ b/frontend/templates/frontend/404.html
@@ -20,7 +20,7 @@
             Oops! The page you're 
             looking for is not here. 
         </p> 
-        <a href="https://www.geeksforgeeks.org/"> 
+        <a href="http://89.111.175.49/"> 
             Go Back to Home 
         </a> 
     </div> 
